Pulse: iterative chart composer endpoint and shiftable time windows (offset_days)
